// Copyright Â© 2019 Binance
//
// This file is part of Binance. The full Binance copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";
package binance.tsslib.eddsa.signing;
option go_package = "tss/schnorr/signing";

/*
 * Represents a BROADCAST message sent to all parties during Round 1 of the EdDSA TSS pre-signing protocol.
 */
message PreSignRound1Message {
    bytes commitment = 1;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 2 of the EdDSA TSS pre-signing protocol.
 */
message PreSignRound2Message {
    repeated bytes de_commitment = 1;
    repeated bytes proof = 2;
}

/*
 * Represents a BROADCAST message sent to all parties during Round 3 of the EDDSA TSS signing protocol.
 */
message SignRound3Message {
    bytes s = 1;
}
